Fixed overflow issue on mobile nav

--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -20,7 +20,6 @@
     &__list {
         list-style: none;
         margin: 0;
-        overflow: hidden;
 
         @include breakpoint(sm) {
             padding: $baseline 0;
